_MYTEST/final1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dev-jenkins
  namespace: dev
spec:
  containers:
    - name: jenkins
      image: jenkins/jenkins
      volumeMounts:
        - mountPath: "/var/lib/jenkins/"
          name: task-pv-storage
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: data-volume
