_MYTEST/redis.yaml

  apiVersion: v1 
  kind: Pod
  metadata: 
    name: web
  spec:
    containers:
    - name: web
      image: redis
      ports:
      - containerPort: 9090
