_MYTEST/task14515.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
  labels:
    app: my-storage-app
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim
  containers:
    - name: task-pv-container
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
