_MYTEST/task15.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: my-storage-app
  name: task-pv-pod
spec:
  nodeSelector:
    test: deneme
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
