_MYTEST/task16-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-proxy
spec:
  containers:
    - name: nginx
      image: nginx
