_MYTEST/task1717.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
spec:
  containers:
    - image: mysql:5.7
      name: mysql-pod
      volumeMounts:
      - name: secret-volume
        mountPath: "/credentials"   
  volumes:
  - name: secret-volume
    secret:
      secretName: db-secret
