_MYTEST/test16.yaml

apiVersion: v1
kind: Pod
metadata:
  name: nginx-proxy
spec:
  containers:
    - name: test-container
      image: nginx
