_MYTEST/test17.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
spec:
  containers:
  - name: mypod
    image: mysql:5.7
    volumeMounts:
    - name: foo
      mountPath: "/credentials"
      readOnly: true
  volumes:
  - name: foo
    secret:
      secretName: db-secret
