_MYTEST/service111.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: fleet
spec:
  ports:
    - protocol: TCP
      port: 80
