_MYTEST/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end
  namespace: fleet  
spec:
  rules:
  - http:
      paths:
      - path: /hello 
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
