_MYTEST/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-80
  namespace: blackbird
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: blackbird
    ports:
    - protocol: TCP
      port: 80
  podSelector: {}
